--- a/stickmail/gwt/src/main/java/it/mate/stickmail/client/view/MailListView.ui.xml
+++ b/stickmail/gwt/src/main/java/it/mate/stickmail/client/view/MailListView.ui.xml
@@ -11,6 +11,8 @@
   
     <s:SignPanel ui:field="signPanel"/>
     
+    <p:TouchButton text="Delete selected mails" ui:field="deleteBtn" addStyleNames="ui-delete-btn"/>
+    
     <m:ScrollPanel ui:field="resultsPanel"/>
     
   </g:HTMLPanel>
