--- a/stickmail/gwt/src/main/java/it/mate/stickmail/client/ui/theme/css/main.css
+++ b/stickmail/gwt/src/main/java/it/mate/stickmail/client/ui/theme/css/main.css
@@ -304,3 +304,43 @@ body {
   font-size: 12px;
 }
 
+@eval firstRunPanel it.mate.stickmail.client.view.HomeView.getFirstRunPanelWidth();
+
+.ui-firstRunPanel {
+  width: firstRunPanel;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  display: none;
+  text-align: center;
+  border: solid 8px rgba(58, 41, 41, 0.68);	
+  background-color: rgba(58, 41, 41, 0.68);
+}
+
+.ui-firstRunPanel .ui-firstRunPanel-top div {
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  background-color: rgb(150, 255, 200);
+  padding-top: 0.8em;
+  padding-bottom: 1.2em;
+  font-family: verdana;
+  font-weight: bold;
+  font-size: 0.88em;
+}
+
+.ui-firstRunPanel-content {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+}
+
+.ui-firstRunPanel .ui-firstRunPanel-content div {
+  background-color: white;
+  padding-top: 0.6em;
+  font-size: 0.72em;
+  font-weight: 600;
+}
+
+.ui-firstRunLbl {
+  margin: 10px;
+  padding-bottom: 1em;
+}
