--- a/trunk/stickmail/gwt/src/main/java/it/mate/stickmail/client/view/HomeView.ui.xml
+++ b/trunk/stickmail/gwt/src/main/java/it/mate/stickmail/client/view/HomeView.ui.xml
@@ -24,6 +24,8 @@
       <gc:SimpleContainer addStyleNames="ui-firstRunPanel-content">
         <gc:Spacer height="1px" addStyleNames="ui-firstRunPanel-content-spacer"/>
         <g:HTML ui:field="firstRunLbl" addStyleNames="ui-firstRunLbl"/>
+        <p:TouchHTML text="login" addStyleNames="ui-firstRunLink" ui:field="helloBtn"/>
+        <gc:Spacer height="1.2em"/>
       </gc:SimpleContainer>
     </gc:SimpleContainer>
     
