--- a/trunk/stickmail/gwt/src/main/java/it/mate/stickmail/client/ui/theme/css/main.css
+++ b/trunk/stickmail/gwt/src/main/java/it/mate/stickmail/client/ui/theme/css/main.css
@@ -1,13 +1,5 @@
 
-@external gwt*, dialog*;
-
-@external mgwt*;
-
-@external phg*;
-
-@external stm*;
-
-@external ui*;
+@external gwt*, dialog*, mgwt*, phg*, stm*, ui*;
 
 @url bgr bgrImage;
 
@@ -96,6 +88,12 @@ body {
 .ui-homePanel .mgwt-TextBox .mgwt-InputBox-box:focus {
   padding-top: 5px;
   padding-left: 3px;
+}
+
+.phg-CalendarDialog-Header .phg-TouchHTML {
+  padding-top: 0.5em;
+  font-size: 22px;
+  height: 1.9em;
 }
 
 .ui-homePanel {
