--- a/trunk/phgcommons/src/main/java/it/mate/phgcommons/client/ui/theme/css/phg.css
+++ b/trunk/phgcommons/src/main/java/it/mate/phgcommons/client/ui/theme/css/phg.css
@@ -314,3 +314,73 @@
   background: url('main/images/check-28.png') no-repeat rgb(255, 255, 255);
 }
 
+.phg-CheckBox-Circle {
+  background: url(main/images/check-circle-32.png) no-repeat transparent;
+  border: 0;
+  width: 32px;
+  height: 32px;
+}
+
+.phg-CheckBox-Circle-selected {
+  background: url(main/images/check-circle-selected-32.png) no-repeat transparent;
+}
+
+.phg-TouchCombo {
+  border: 1px solid rgba(125, 125, 125, 0.8);
+  -webkit-border-radius: 4px;
+  display: block;
+  position: relative;
+  padding: 9px 13px;
+  margin: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: left;
+  -webkit-appearance: none;
+  background: white;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-size: 15px;
+}
+
+.phg-TouchCombo-arrow {
+  border-left: 1px solid rgba(125, 125, 125, 0.8);
+  position: absolute;
+  right: 0px;
+  top: 0;
+  height: 100%;
+  width: 48px;
+  background: rgba(200, 200, 200, 0.8) url(main/images/arrowdown-32.png) no-repeat 7px 4px;
+}
+
+.phg-tooltip {
+  font-style: italic;
+  font-size: 0.8em;
+  position: relative;
+  top: -0.4em;
+  left: -0.2em;
+  font-weight: bold;
+  color: rgba(127,127,127,0.9);
+}
+
+.phg-TouchCombo-ItemsDialog {
+  background: #F2F2F2;
+  border: 3px solid #bcc2cd;
+  border-radius: 16px;
+  color: black;
+}
+
+.phg-TouchCombo-ItemsDialog-item {
+  height: 2em;
+  /* font-family: arial, sans-serif; */
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-weight: normal;
+  font-size: 16px;
+  padding: 0em 1.5em;
+  padding-top: 0.4em;
+  width: 8em;
+}
+
+.phg-TouchCombo-ItemsDialog-item-middle {
+  border-bottom: 1px solid grey;
+}
+
