--- a/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/ui/theme/css/main.css
+++ b/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/ui/theme/css/main.css
@@ -301,8 +301,29 @@ body {
   padding-left: 0.6em;
   color: blue;
   font-weight: bold;
+  margin-bottom: -5px;
+}
+
+.ui-field-label-1 {
+  margin-bottom: 0;
+}
+
+.ui-inline-label {
+  color: blue;
+  font-weight: bold;
+  padding-left: 0.6em;
+  padding-top: 0.4em;
+  padding-right: 0.4em;
 }
 
 .ui-view-separator {
   margin-top: 0.5em;
 }
+
+.phg-DateBox.ui-app-calbox {
+  width: 6em;
+  height: 1em;
+  padding-left: 3px;
+  padding-right: 18px;
+}
+
