--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/NewTherapyView.ui.xml
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/NewTherapyView.ui.xml
@@ -14,22 +14,26 @@
       <p:TouchButton text="Save" ui:field="saveBtn" addStyleNames="ui-top-action-btn"/>
       <p:TouchButton text="Cancel" ui:field="cancelBtn" addStyleNames="ui-top-action-btn"/>
     </g:HorizontalPanel>
-    
+
+    <!-- .............................................................................. -->
     <hr class="ui-view-separator-1"/>
     
     <g:Label text="Nome del farmaco:" addStyleNames="ui-field-label ui-field-label-1"/>
     <p:MTextBoxPatched ui:field="titleBox" addStyleNames="ui-app-textbox, ui-title-box"/>
     
+    <!-- .............................................................................. -->
     <hr class="ui-view-separator"/>
     
     <g:Label text="Tipo di terapia:" addStyleNames="ui-field-label"/>
     <p:TouchCombo ui:field="tipoTerapiaCombo" addStyleNames="ui-app-combobox"/>
     
+    <!-- .............................................................................. -->
     <hr class="ui-view-separator"/>
     
     <g:Label text="Data inizio:" addStyleNames="ui-field-label"/>
     <ph:PhCalendarBox ui:field="inizioBox" addStyleNames="ui-app-calbox"/>
     
+    <!-- .............................................................................. -->
     <hr class="ui-view-separator"/>
     
     <g:Label text="Tipo di ricorrenza:" addStyleNames="ui-field-label"/>
@@ -37,12 +41,62 @@
     
     <g:VerticalPanel ui:field="ricorrenzaGiornalieraPanel" spacing="0" visible="false">
       <g:HorizontalPanel>
-        <g:Label text="Ogni" addStyleNames="ui-inline-label"/>
+        <g:Label text="Ogni:" addStyleNames="ui-inline-label"/>
         <p:MTextBoxPatched ui:field="rangeBox" addStyleNames="ui-app-textbox, ui-range-box"/>
-        <g:Label text="giorni" addStyleNames="ui-inline-label"/>
+        <g:Label text="giorni" addStyleNames="ui-inline-label, ui-day-label"/>
       </g:HorizontalPanel>    
     </g:VerticalPanel>
     
+    <g:VerticalPanel ui:field="ricorrenzaSettimanalePanel" spacing="0" visible="false">
+      <g:HorizontalPanel>
+        <g:Label text="Ogni:" addStyleNames="ui-inline-label"/>
+        <g:VerticalPanel>
+          <g:Label text="Lun" addStyleNames="ui-inline-label, ui-day-label"/>
+          <ph:PhCheckBox/>
+        </g:VerticalPanel>
+        <g:VerticalPanel>
+          <g:Label text="Mar" addStyleNames="ui-inline-label, ui-day-label"/>
+          <ph:PhCheckBox/>
+        </g:VerticalPanel>
+        <g:VerticalPanel>
+          <g:Label text="Mer" addStyleNames="ui-inline-label, ui-day-label"/>
+          <ph:PhCheckBox/>
+        </g:VerticalPanel>
+        <g:VerticalPanel>
+          <g:Label text="Gio" addStyleNames="ui-inline-label, ui-day-label"/>
+          <ph:PhCheckBox/>
+        </g:VerticalPanel>
+        <g:VerticalPanel>
+          <g:Label text="Ven" addStyleNames="ui-inline-label, ui-day-label"/>
+          <ph:PhCheckBox/>
+        </g:VerticalPanel>
+        <g:VerticalPanel>
+          <g:Label text="Sab" addStyleNames="ui-inline-label, ui-day-label"/>
+          <ph:PhCheckBox/>
+        </g:VerticalPanel>
+        <g:VerticalPanel>
+          <g:Label text="Dom" addStyleNames="ui-inline-label, ui-day-label"/>
+          <ph:PhCheckBox/>
+        </g:VerticalPanel>
+      </g:HorizontalPanel>
+    </g:VerticalPanel>
+    
+    <!-- .............................................................................. -->
+    <hr class="ui-view-separator"/>
+    
+    <g:Label text="Orari di assunzione:" addStyleNames="ui-field-label"/>
+    <p:TouchCombo ui:field="tipoOrariCombo" addStyleNames="ui-app-combobox" itemWidth="10em"/>
+    
+    <g:VerticalPanel ui:field="orariRegolariPanel" spacing="0" visible="false">
+      <g:HorizontalPanel>
+        <g:Label text="Ogni:" addStyleNames="ui-inline-label"/>
+        <p:MTextBoxPatched ui:field="rangeOrariBox" addStyleNames="ui-app-textbox, ui-range-box"/>
+        <g:Label text="ore" addStyleNames="ui-inline-label, ui-day-label"/>
+      </g:HorizontalPanel>    
+    </g:VerticalPanel>
+    
+    <g:VerticalPanel ui:field="orariFissiPanel" spacing="0" visible="false">
+    </g:VerticalPanel>
     
   </g:HTMLPanel>
   
