--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/ui/theme/css/main.css
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/ui/theme/css/main.css
@@ -332,3 +332,16 @@ body {
   font-size: 0.8em;
 }
 
+.ui-hours-label {
+  padding-left: 0.36em;
+}
+
+.phg-TimeBox.ui-app-timebox {
+  height: 1em;
+  width: 3.6em;
+}
+
+.ui-hourrange-box {
+  width: 3.6em;
+}
+
