--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/EditTherapyView.ui.xml
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/EditTherapyView.ui.xml
@@ -89,13 +89,22 @@
     
     <g:VerticalPanel ui:field="orariRegolariPanel" spacing="0" visible="false">
       <g:HorizontalPanel>
-        <g:Label text="Ogni:" addStyleNames="ui-inline-label"/>
-        <p:MTextBoxPatched ui:field="rangeOrariBox" addStyleNames="ui-app-textbox, ui-range-box"/>
-        <g:Label text="ore" addStyleNames="ui-inline-label, ui-day-label"/>
+        <g:Label text="Ogni:" addStyleNames="ui-inline-label" width="7em"/>
+        <p:MTextBoxPatched ui:field="rangeOrariBox" addStyleNames="ui-app-textbox, ui-hourrange-box"/>
+        <g:Label text="ore" addStyleNames="ui-inline-label, ui-hours-label"/>
+      </g:HorizontalPanel>    
+      <g:HorizontalPanel>
+        <g:Label text="A partire dalle:" addStyleNames="ui-inline-label" width="7em"/>
+        <ph:PhTimeBox ui:field="orarioInizioBox" addStyleNames="ui-app-timebox"/>
       </g:HorizontalPanel>    
     </g:VerticalPanel>
     
     <g:VerticalPanel ui:field="orariFissiPanel" spacing="0" visible="false">
+      <g:HorizontalPanel>
+        <g:Label text="Alle:" addStyleNames="ui-inline-label"/>
+        <g:VerticalPanel ui:field="orariListPanel">
+        </g:VerticalPanel>
+      </g:HorizontalPanel>
     </g:VerticalPanel>
     
   </g:HTMLPanel>
