--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/EditTherapyView_PREVIEW1.ui.xml
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/EditTherapyView_PREVIEW1.ui.xml
@@ -36,23 +36,13 @@
     <!-- .............................................................................. -->
     <hr class="ui-view-separator"/>
     
-    <g:Label text="Quantita:" addStyleNames="ui-field-label"/>
-    <gc:Spacer height="0.3em"/>
-    <g:HorizontalPanel>
-      <ph:PhTextBox ui:field="qtaBox" addStyleNames="ui-app-textbox, ui-qta-box" value="1"/>
-      <p:TouchCombo ui:field="umCombo" addStyleNames="ui-app-combobox, ui-um-combobox"/>
-    </g:HorizontalPanel>
-    
-    <!-- .............................................................................. -->
-    <hr class="ui-view-separator"/>
-    
     <g:Label text="Tipo di ricorrenza:" addStyleNames="ui-field-label"/>
     <p:TouchCombo ui:field="tipoRicorrenzaCombo" addStyleNames="ui-app-combobox"/>
     
     <g:VerticalPanel ui:field="ricorrenzaGiornalieraPanel" spacing="0" visible="false">
       <g:HorizontalPanel>
         <g:Label text="Ogni:" addStyleNames="ui-inline-label"/>
-        <p:MTextBoxPatched ui:field="rangeBox" addStyleNames="ui-app-textbox, ui-range-box" value="1"/>
+        <p:MTextBoxPatched ui:field="rangeBox" addStyleNames="ui-app-textbox, ui-range-box"/>
         <g:Label text="giorni" addStyleNames="ui-inline-label, ui-day-label"/>
       </g:HorizontalPanel>    
     </g:VerticalPanel>
@@ -60,17 +50,35 @@
     <g:VerticalPanel ui:field="ricorrenzaSettimanalePanel" spacing="0" visible="false">
       <g:HorizontalPanel>
         <g:Label text="Ogni:" addStyleNames="ui-inline-label"/>
-        <p:MTextBoxPatched ui:field="rangeWeekBox" addStyleNames="ui-app-textbox, ui-range-box" value="1"/>
-        <g:Label text="settimane" addStyleNames="ui-inline-label, ui-day-label"/>
-      </g:HorizontalPanel>    
-    </g:VerticalPanel>
-    
-    <g:VerticalPanel ui:field="ricorrenzaMensilePanel" spacing="0" visible="false">
-      <g:HorizontalPanel>
-        <g:Label text="Ogni:" addStyleNames="ui-inline-label"/>
-        <p:MTextBoxPatched ui:field="rangeMonthBox" addStyleNames="ui-app-textbox, ui-range-box" value="1"/>
-        <g:Label text="mesi" addStyleNames="ui-inline-label, ui-day-label"/>
-      </g:HorizontalPanel>    
+        <g:VerticalPanel>
+          <g:Label text="Lun" addStyleNames="ui-inline-label, ui-day-label"/>
+          <ph:PhCheckBox/>
+        </g:VerticalPanel>
+        <g:VerticalPanel>
+          <g:Label text="Mar" addStyleNames="ui-inline-label, ui-day-label"/>
+          <ph:PhCheckBox/>
+        </g:VerticalPanel>
+        <g:VerticalPanel>
+          <g:Label text="Mer" addStyleNames="ui-inline-label, ui-day-label"/>
+          <ph:PhCheckBox/>
+        </g:VerticalPanel>
+        <g:VerticalPanel>
+          <g:Label text="Gio" addStyleNames="ui-inline-label, ui-day-label"/>
+          <ph:PhCheckBox/>
+        </g:VerticalPanel>
+        <g:VerticalPanel>
+          <g:Label text="Ven" addStyleNames="ui-inline-label, ui-day-label"/>
+          <ph:PhCheckBox/>
+        </g:VerticalPanel>
+        <g:VerticalPanel>
+          <g:Label text="Sab" addStyleNames="ui-inline-label, ui-day-label"/>
+          <ph:PhCheckBox/>
+        </g:VerticalPanel>
+        <g:VerticalPanel>
+          <g:Label text="Dom" addStyleNames="ui-inline-label, ui-day-label"/>
+          <ph:PhCheckBox/>
+        </g:VerticalPanel>
+      </g:HorizontalPanel>
     </g:VerticalPanel>
     
     <!-- .............................................................................. -->
@@ -99,7 +107,7 @@
       </g:HorizontalPanel>
     </g:VerticalPanel>
     
-    <gc:Spacer ui:field="filler" height="12em"/>
+    <gc:Spacer ui:field="filler" height="2em"/>
     
   </g:HTMLPanel>
   
