--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/ui/theme/css/ios.css
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/ui/theme/css/ios.css
@@ -13,3 +13,12 @@ body {
 .ui-HeaderPanel-home {
   background: #3b5998 url(main/images/home.png) no-repeat 5%;
 }
+
+.ui-homePanel .mgwt-TextBox .mgwt-InputBox-box:hover {
+  padding-top: 4px;
+}
+
+.ui-um-combobox {
+  width: 9.8em;
+}
+
